Feat: Add Rituals & News page with Aarti sidebar and dynamic content API

--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
                 <li><a href="#home" data-en="Home" data-hi="मुख्य पृष्ठ" aria-label="Thawe Dham Home">Home</a></li>
                 <li><a href="#darshan" data-en="Live Darshan" data-hi="दिव्य दर्शन"
                         aria-label="Live Darshan of Mata Thawe Wali">Live Darshan</a></li>
+                <li><a href="rituals-news.html" data-en="Rituals & News" data-hi="अनुष्ठान और समाचार"
+                        aria-label="Rituals and Latest News">Rituals & News</a></li>
                 <li><a href="#history" data-en="History" data-hi="इतिहास"
                         aria-label="History of Thawe Mandir and Rahsu Bhagat">History</a></li>
                 <li><a href="#calendar" data-en="Calendar" data-hi="पंचांग"
@@ -154,79 +156,75 @@
                 <div class="section-header">
                     <span class="subtitle" data-en="The Sacred Legend" data-hi="पवित्र पौराणिक कथा">The Sacred
                         Legend</span>
-                    <h2 data-en="The Story of Rahshu Bhagat" data-hi="रह्शु भगत की विस्तृत कथा">The Story of Rahshu
-                        Bhagat</h2>
+                    <h2 data-en="The Legend of Thawe Mandir" data-hi="थावे मंदिर की कथा">The Legend of Thawe
+                        Mandir</h2>
                 </div>
                 <div class="history-detailed">
                     <div class="history-main-text">
-                        <p class="lead" data-en="A testament to supreme devotion that shook an empire."
-                            data-hi="सर्वोच्च भक्ति का एक प्रमाण जिसने एक साम्राज्य को हिला दिया।">A testament to
-                            supreme devotion that shook an empire.</p>
+                        <p class="lead"
+                            data-en="A divine saga of devotion, challenge, and the miraculous appearance of Mata Rani."
+                            data-hi="भक्ति, चुनौती और माता रानी के चमत्कारिक प्रकट होने की एक दिव्य गाथा।">A divine saga
+                            of
+                            devotion, challenge, and the miraculous appearance of Mata Rani.</p>
 
                         <div class="story-block">
-                            <h3 data-en="The Miracle of Grains" data-hi="अनाज का चमत्कार">The Miracle of Grains</h3>
-                            <p data-en="In the 18th century, during a severe famine, Rahshu Bhagat, a humble devotee, would pray to Mata Rani. Miraculously, he would produce grains from a small piece of tiger-skin to feed the starving people. While the people saw divinity, the local King of Hathwa suspected black magic."
-                                data-hi="18वीं शताब्दी में, एक भीषण अकाल के दौरान, एक विनम्र भक्त रह्शु भगत माता रानी की प्रार्थना करते थे। चमत्कारिक रूप से, वह भूखे लोगों को खिलाने के लिए बाघ की खाल के एक छोटे से टुकड़े से अनाज निकालते थे। जहाँ लोगों ने दिव्यता देखी, वहीं हथवा के तत्कालीन राजा को काले जादू का संदेह हुआ।">
-                                In the 18th century, during a severe famine, Rahshu Bhagat, a humble devotee, would pray
-                                to Mata Rani. Miraculously, he would produce grains from a small piece of tiger-skin to
-                                feed the starving people. While the people saw divinity, the local King of Hathwa
-                                suspected black magic.</p>
+                            <h3 data-en="The Miracle in Famine" data-hi="अकाल में चमत्कार">The Miracle in Famine</h3>
+                            <p data-en="In the 12th century, King Manan Sen of Chero country considered himself a great devotee. However, when a severe famine struck the Bihar region, the subjects were in distress. At this time, Rahsu Bhagat, a devotee of Maa Kamakhya, lived in the Thawe forest. Seeing the suffering, Rahsu performed a miracle through rigorous penance. He threshed 'Katwa' grass using a snake as a rope, producing grains to feed the starving people, saving many lives."
+                                data-hi="12वीं शताब्दी में चेरे देश के राजा मनन सेन स्वयं को माँ दुर्गा का बड़ा भक्त मानते थे। परंतु एक समय बिहार क्षेत्र में भयंकर अकाल पड़ा। चारों ओर भूख, त्राहि-त्राहि और हाहाकार मच गया। इसी समय थावे के जंगल में माँ कामाख्या के अनन्य साधक भक्त रहसू निवास करते थे। राज्य में अकाल देखकर भक्त रहसू ने देवी माँ की कठोर साधना से चमत्कार किया। उन्होंने जंगल में बाँध को साँप से बाँधकर कटवा (एक प्रकार की घास) की दवनी करनी शुरू की, जिससे अनाज निकलने लगा। यह अनाज वे भूखे लोगों में बाँट देते थे, जिससे अनेक लोगों की जान बची।">
+                                In the 12th century, King Manan Sen of Chero country considered himself a great devotee.
+                                However, when a severe famine struck the Bihar region, the subjects were in distress. At
+                                this time, Rahsu Bhagat, a devotee of Maa Kamakhya, lived in the Thawe forest. Seeing
+                                the suffering, Rahsu performed a miracle through rigorous penance. He threshed 'Katwa'
+                                grass using a snake as a rope, producing grains to feed the starving people, saving many
+                                lives.</p>
                         </div>
 
                         <div class="story-block">
-                            <h3 data-en="The Royal Challenge" data-hi="शाही चुनौती">The Royal Challenge</h3>
-                            <p data-en="The King challenged Rahshu to prove his devotion by calling the Goddess in person. Rahshu repeatedly warned the King that the arrival of the Goddess would bring the end of the kingdom. Ignorant and arrogant, the King forced Rahshu to begin the invocation."
-                                data-hi="राजा ने रह्शु को साक्षात् देवी को बुलाकर अपनी भक्ति सिद्ध करने की चुनौती दी। रह्शु ने बार-बार राजा को चेतावनी दी कि देवी के आगमन से राज्य का अंत हो जाएगा। अज्ञानी और अहंकारी राजा ने रह्शु को आह्वान शुरू करने के लिए मजबूर किया।">
-                                The King challenged Rahshu to prove his devotion by calling the Goddess in person.
-                                Rahshu repeatedly warned the King that the arrival of the Goddess would bring the end of
-                                the kingdom. Ignorant and arrogant, the King forced Rahshu to begin the invocation.</p>
+                            <h3 data-en="The King's Challenge" data-hi="राजा की चुनौती">The King's Challenge</h3>
+                            <p data-en="King Manan Sen did not believe the news of this miracle and called it hypocrisy. He visited Thawe and questioned Rahsu, who attributed everything to Maa Kamakhya's grace. The arrogant King threatened to punish Rahsu and challenged him: 'If your Goddess is real, call Her here in person, or you shall be hanged.'"
+                                data-hi="यह समाचार राजा मनन सेन तक पहुँचा, परंतु राजा को विश्वास नहीं हुआ। उन्होंने इसे ढोंग और पाखंड माना। मंत्रियों के आग्रह पर राजा स्वयं थावे पहुँचे और भक्त रहसू से पूछताछ की। रहसू ने स्पष्ट कहा कि यह सब माँ कामाख्या की कृपा से हो रहा है। राजा फिर भी नहीं माने और भक्त रहसू को दंड देने की धमकी दी। राजा ने चुनौती दी कि यदि वास्तव में देवी की कृपा है, तो देवी को यहाँ प्रकट करके दिखाओ, अन्यथा भक्त रहसू को फाँसी दे दी जाएगी।">
+                                King Manan Sen did not believe the news of this miracle and called it hypocrisy. He
+                                visited Thawe and questioned Rahsu, who attributed everything to Maa Kamakhya's grace.
+                                The arrogant King threatened to punish Rahsu and challenged him: 'If your Goddess is
+                                real, call Her here in person, or you shall be hanged.'</p>
                         </div>
 
                         <div class="journey-timeline">
                             <h4 data-en="The Journey of Mata Rani" data-hi="माता रानी की यात्रा">The Journey of Mata
                                 Rani</h4>
                             <ul class="journey-list">
-                                <li data-en="Mata started from Kamakhya (Assam)" data-hi="माता कामाख्या (असम) से चलीं">
+                                <li data-en="Mata started from Kamakhya (Assam)" data-hi="माँ कामाख्या (असम) से चलीं">
                                     Mata started from Kamakhya (Assam)</li>
-                                <li data-en="Passed through Kolkata as Dakshineswari"
-                                    data-hi="दक्षिणेश्वरी के रूप में कोलकाता से गुजरीं">Passed through Kolkata as
-                                    Dakshineswari</li>
-                                <li data-en="Reached Patna as Patan Devi" data-hi="पटन देवी के रूप में पटना पहुँचीं">
+                                <li data-en="Reached Kolkata (Dakshineswari)" data-hi="कोलकाता पहुँचीं">Reached Kolkata
+                                </li>
+                                <li data-en="Reached Patna as Patan Devi" data-hi="पटना (पटन देवी) होते हुए">
                                     Reached Patna as Patan Devi</li>
-                                <li data-en="Passed Ami as Ambika Bhawani"
-                                    data-hi="अंबिका भवानी के रूप में आमी से गुजरीं">Passed Ami as Ambika Bhawani</li>
-                                <li data-en="Finally reached the forests of Thawe"
-                                    data-hi="अंत में थावे के जंगलों में पहुँचीं">Finally reached the forests of Thawe
+                                <li data-en="Passed Ami as Ambika Bhawani" data-hi="आमी (अंबिका भवानी) से गुजरीं">Passed
+                                    Ami as Ambika Bhawani</li>
+                                <li data-en="Reached Ghora Ghat and finally Thawe"
+                                    data-hi="घोड़ा घाट होते हुए अंततः थावे में प्रकट हुईं">Reached Ghora Ghat and
+                                    finally Thawe
                                 </li>
                             </ul>
                         </div>
 
                         <div class="story-block">
-                            <h3 data-en="The Arrival & Salvation" data-hi="आगमन और मोक्ष">The Arrival & Salvation</h3>
-                            <p data-en="As She arrived, the earth shook. Mata Rani's hand emerged through Rahshu's head, holding a golden bangle. At that very moment, the King's massive palace collapsed into ruins, and the Chero dynasty was wiped out. Rahshu Bhagat attained salvation at the feet of the Mother."
-                                data-hi="जैसे ही वह पहुँचीं, धरती काँप उठी। माता रानी का हाथ रह्शु के सिर को चीरते हुए बाहर निकला, जिसमें सोने का कंगन था। उसी क्षण, राजा का विशाल महल खंडहर में बदल गया और चेरो वंश का सर्वनाश हो गया। रह्शु भगत ने माता के चरणों में मोक्ष प्राप्त किया।">
-                                As She arrived, the earth shook. Mata Rani's hand emerged through Rahshu's head, holding
-                                a golden bangle. At that very moment, the King's massive palace collapsed into ruins,
-                                and the Chero dynasty was wiped out. Rahshu Bhagat attained salvation at the feet of the
-                                Mother.</p>
+                            <h3 data-en="The Divine Arrival" data-hi="देवी का आगमन">The Divine Arrival</h3>
+                            <p data-en="Rahsu invoked the Goddess. She traveled from Kolkata to Thawe. Rahsu pleaded with Her to return to save the Kingdom, but the King remained adamant. As Mata appeared, the King's palace collapsed, and Rahsu was instantly cured of leprosy. The King, stunned by the miracle, asked for forgiveness."
+                                data-hi="भक्त रहसू ने देवी माँ का आह्वान किया। माँ कामाख्या भक्त की पुकार पर चल पड़ीं। जब देवी माँ कोलकाता पहुँचीं तो भक्त रहसू ने पुनः विनती की कि अभी भी समय है, लौट जाइए। किंतु राजा अपने हठ पर अड़ा रहा। देवी माँ कोलकाता से चलकर पटना और सारण होते हुए घोड़ा घाट पहुँचीं और अंततः गोपालगंज के थावे में प्रकट हुईं। देवी के प्रकट होते ही भक्त रहसू को कोढ़ से मुक्ति मिल गई। राजा और पूरा राज्य यह चमत्कार देखकर स्तब्ध रह गया। राजा को अपनी भूल का एहसास हुआ और उसने भक्त रहसू से क्षमा माँगी।">
+                                Rahsu invoked the Goddess. She traveled from Kolkata to Thawe. Rahsu pleaded with Her to
+                                return to save the Kingdom, but the King remained adamant. As Mata appeared, the King's
+                                palace collapsed, and Rahsu was instantly cured of leprosy. The King, stunned by the
+                                miracle, asked for forgiveness.</p>
                         </div>
 
                         <div class="story-block">
                             <h3 data-en="The Sacred Shaktipeeth" data-hi="पवित्र शक्तिपीठ">The Sacred Shaktipeeth</h3>
-                            <p data-en="Thawe Dham is revered as a site equivalent to the 52 Shaktipeeths of India. It is believed that Mata Sati's presence is most profound here, attracting millions of devotees who seek her divine protection."
-                                data-hi="थावे मंदिर को भारत के 52 शक्तिपीठों के समान एक स्थल के रूप में पूजा जाता है। यह माना जाता है कि यहाँ माता सती की उपस्थिति सबसे गहरी है, जो लाखों भक्तों को अपनी दिव्य सुरक्षा के लिए आकर्षित करती है।">
-                                Thawe Dham is revered as a site equivalent to the 52 Shaktipeeths of India. It is
-                                believed that Mata Sati's presence is most profound here, attracting millions of
-                                devotees who seek her divine protection.</p>
-                        </div>
-
-                        <div class="story-block">
-                            <h3 data-en="The Mysterious Tree" data-hi="विचित्र वृक्ष">The Mysterious Tree</h3>
-                            <p data-en="Within the temple premises stands a mysterious tree whose botanical identity remains unidentified to this day. Legend says it grew in a cross-like shape, embodying a divine connection with the temple's history and the Mother's appearance."
-                                data-hi="मंदिर के घेरे के भीतर एक विचित्र पेड़ है, जिसकी वानस्पतिक पहचान आज तक अज्ञात है। किंवदंती है कि यह क्रूस की तरह बड़ा हुआ है, जो मंदिर के इतिहास और माता के प्रकट होने के साथ एक दैवीय संबंध का प्रतीक है।">
-                                Within the temple premises stands a mysterious tree whose botanical identity remains
-                                unidentified to this day. Legend says it grew in a cross-like shape, embodying a divine
-                                connection with the temple's history and the Mother's appearance.</p>
+                            <p data-en="Mata Rani settled in Thawe as 'Mata Sinhasani'. Today, Thawe Dham is a major Shakti Peeth in Bihar. Millions of devotees visit seeking Her blessings, believing that true devotion fulfills all wishes."
+                                data-hi="देवी माँ ने अलग-अलग स्थानों पर दर्शन दिए और अंत में थावे में विराजमान हुईं। यहाँ देवी माँ सिंहासनी के रूप में प्रतिष्ठित हुईं। आज थावे माँ सिंहासनी का यह मंदिर बिहार का एक प्रमुख शक्ति पीठ है। दूर-दूर से लाखों श्रद्धालु यहाँ दर्शन के लिए आते हैं। मान्यता है कि सच्चे मन से माँ के दर्शन करने पर भक्तों के सभी कष्ट दूर होते हैं और उनकी मनोकामनाएँ पूर्ण होती हैं।">
+                                Mata Rani settled in Thawe as 'Mata Sinhasani'. Today, Thawe Dham is a major Shakti
+                                Peeth in Bihar. Millions of devotees visit seeking Her blessings, believing that true
+                                devotion fulfills all wishes.</p>
                         </div>
 
                         <div class="story-block">
