Fix: Add text overflow safety for Aarti section on mobile

--- a/rituals-news.html
+++ b/rituals-news.html
@@ -149,6 +149,7 @@
             white-space: pre-line;
             /* Preserves line breaks */
             font-family: 'Outfit', sans-serif;
+            overflow-wrap: break-word;
         }
 
         @media (max-width: 992px) {
